# eda_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  SERVICES.md  function.md  pyproject.toml  restart.sh
app/: config.py  logger.py  main.py  tracing.py
app/agent/: graph.py  routing.py  state.py
app/agent/nodes/: command_extractor.py  intent_detector.py  passthrough.py  rag_retriever.py  response_generator.py
app/api/: log_viewer.py  router.py
app/api/v1/: chat.py  messages.py  models.py
app/llm/: factory.py
app/rag/: client.py
app/schemas/: openai_compat.py
app/streaming/: sse.py
rag_service/: config.py  llm_retriever.py  main.py  schemas.py
tests/: test_api.py
