[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eda-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "openai>=1.30",
]

[project.optional-dependencies]
bedrock = ["langchain-aws>=0.2", "boto3>=1.35"]
ollama  = ["langchain-ollama>=0.2"]
dev     = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["app", "rag_service"]
